# ntpgps

./: .gitignore  DESIGN_SPEC.md  install.sh  pyproject.toml  readme.md  requirements.txt  uninstall.sh
ntpgps/: __init__.py  main.py  server.py
ntpgps/config/: settings.py
ntpgps/gps/: parser.py
ntpgps/ntp/: chrony.py  source_manager.py
ntpgps/web/: app.py
ntpgps/web/static/css/: style.css
ntpgps/web/static/js/: app.js
ntpgps/web/templates/: index.html
tests/: test_chrony.py  test_config.py  test_gps_parser.py  test_source_manager.py  test_web_api.py
